--- a/admin/src/pages/Add/Add.css
+++ b/admin/src/pages/Add/Add.css
@@ -1,35 +1,57 @@
-.add{
+.add {
     width: 70%;
-    margin-left: max(5vw,25px);
+    margin-left: max(5vw, 25px);
     margin-top: 50px;
     color: #6D6D6D;
     font-size: 16px;
 }
-.add form{
-   gap: 20px;
+
+.add form {
+    gap: 20px;
 }
-.add-img-upload img{
+
+.add-img-upload img {
     width: 120px;
 }
-.add-product-name, .add-product-description{
-    width: max(40%,280px);
+
+.add-product-name,
+.add-product-description {
+    width: max(40%, 280px);
 }
-.add-product-name input ,.add-product-description textarea{
-    padding: 10px 10px;
+
+.add-product-name input,
+.add-product-description textarea {
+    padding: 10px;
+    border: 1px solid #c9c9c9;
+    border-radius: 4px;
+    outline: none;
 }
-.add-category-price{
+
+.add-category-price {
     display: flex;
     gap: 30px;
 }
-.add-category-price select,.add-category-price input{
+
+.add-category-price select,
+.add-category-price input {
     max-width: 120px;
     padding: 10px;
+    border: 1px solid #c9c9c9;
+    border-radius: 4px;
+    outline: none;
 }
-.add-btn{
+
+.add-btn {
     max-width: 120px;
     border: none;
     padding: 10px;
     background-color: black;
     color: white;
     cursor: pointer;
+    border-radius: 4px;
+    transition: 0.3s;
+}
+
+.add-btn:hover {
+    background-color: #333;
 }
