--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -1,4 +1,4 @@
-.login-popup{
+.login-popup {
     position: absolute;
     z-index: 1;
     width: 100%;
@@ -6,9 +6,10 @@
     background-color: #00000090;
     display: grid;
 }
-.login-popup-container{
+
+.login-popup-container {
     place-self: center;
-    width: max(23vw,330px);
+    width: max(23vw, 330px);
     color: #808080;
     background-color: white;
     display: flex;
@@ -19,28 +20,53 @@
     font-size: 14px;
     animation: fadeIn 0.5s;
 }
-.login-popup-title{
+
+.login-popup-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: black;
 }
-.login-popup-title img{
+
+.login-popup-title img {
     width: 16px;
     cursor: pointer;
 }
-.login-popup-inputs{
+
+.login-popup-inputs {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.login-popup-inputs input{
+
+.login-popup-inputs input {
     outline: none;
     border: 1px solid #C9C9C9;
     padding: 10px;
     border-radius: 4px;
 }
-.login-popup-container button{
+
+.password-input-wrapper {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.password-input-wrapper input {
+    width: 100%;
+}
+
+.password-toggle-icon {
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    background: white;
+}
+
+.login-popup-container button {
     border: none;
     padding: 10px;
     border-radius: 4px;
@@ -49,20 +75,27 @@
     font-size: 15px;
     cursor: pointer;
 }
-.login-popup-condition{
+
+.login-popup-condition {
     display: flex;
     align-items: start;
     gap: 8px;
     margin-top: -15px;
 }
 
-.login-popup-condition input{
+.login-popup-condition input {
     margin-top: 5px;
 }
 
 
-.login-popup p span{
+.login-popup p span {
     color: #FF4C24;
     font-weight: 500;
     cursor: pointer;
+}
+
+.google-login-wrapper {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
