--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -74,6 +74,10 @@
     background-color: #FF4C24;
     font-size: 15px;
     cursor: pointer;
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
 }
 
 .login-popup-condition {
@@ -98,6 +102,10 @@
     display: flex;
     justify-content: center;
     margin-top: 10px;
+    max-width: 300px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .login-divider {
