--- a/admin/src/components/Navbar/Navbar.css
+++ b/admin/src/components/Navbar/Navbar.css
@@ -11,6 +11,9 @@
 
 .navbar .profile {
     width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
     cursor: pointer;
 }
 
